--- a/#style.css
+++ b/#style.css
@@ -15,4 +15,6 @@ body {
 
     <iframe width="560" height="315" src="https://youtu.be/Ujs1Ud7k49M?si=apwXivFfP2yki53d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-</body>
+</body><head>
+<link rel="stylesheet" href="styles.css">
+</head>
