--- a/#style.css
+++ b/#style.css
@@ -18,3 +18,6 @@ body {
 </body><head>
 <link rel="stylesheet" href="styles.css">
 </head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
+<
