--- a/#style.css
+++ b/#style.css
@@ -1,20 +1,40 @@
-body {
-    color: rgb(179, 19, 112);
-    background: rgb(224, 210, 210);
+element.style {
+
+}
+body 
+display: block;
+margin: 8px;
+element.style {
+    background: black;
+  }
+  body {
+  display: block;
+  margin: 8px;
+  
+}
+element.style {
+    background: black;
+      color: white;
+  }
+  body {
+    color: white;
+    background: black;
 }
 <head>
-
+    <link rel="stylesheet" href="styles.css">
 </head>
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
+</head>
+<div>
+<h1>sccp</h1>
+<p>#corinthians </p>
+</div>
 
-<body>
-    <header>ALURAFLIX</header>
 
 
-    <h1>Barbie</h1>
-    <p>#barbie </p>
-
-    <iframe width="560" height="315" src="https://youtu.be/Ujs1Ud7k49M?si=apwXivFfP2yki53d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=1sgIklrTsL9tIX_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body><head>
 <link rel="stylesheet" href="styles.css">
 </head>
