--- a/#style.css
+++ b/#style.css
@@ -44,3 +44,7 @@ element.style {
     <link rel="stylesheet" href="styles.css">
     <title>Aluraflix</title>
 <
+<div>
+<h1>sccp</h1>
+<p>#corinthians </p>
+</div>
