--- a/#style.css
+++ b/#style.css
@@ -50,4 +50,24 @@ element.style {
 </div>
 <div>
 <iframe width="560" height="315" src="https<iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=wetoWLvYnr0HzEKD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div><head>
+<link rel="stylesheet" href="styles.css">
+<title>Aluraflix</title>
+</head>
+
+<body>
+<header>ALURAFLIX</header>
+
+<div>
+    <h1>sccp</h1>
+    <p>#corinthians </p>
 </div>
+
+<div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=wetoWLvYnr0HzEKD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+</body>
