--- a/#style.css
+++ b/#style.css
@@ -1,13 +1,11 @@
 element.style {
 
 }
-body {
-    color: red;
-    display block;
+body 
+display: block;
     margin: 8px;
+element.style {
     background: black;
-    element.style {
-    
   }
   body {
   display: block;
