--- a/#style.css
+++ b/#style.css
@@ -1,153 +1,60 @@
-element.style {
-
-}
-body 
-display: block;
-    margin: 8px;
-element.style {
-    background: black;
-  }
-  body {
-  display: block;
-  margin: 8px;
-  
-}
-element.style {
-    background: black;
-      color: white;
-  }
-  body {
-    color: white;
-    background: black;
-}
-    <head>
-
-        <link rel="stylesheet" href="styles.css">
-
-</head>
-
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
-</head>
-<div>
-<h1>sccp</h1>
-<p>#corinthians </p>
-</div>
-
-
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=1sgIklrTsL9tIX_g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body><head>
-<link rel="stylesheet" href="styles.css">
-</head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Aluraflix</title>
-<
-<div>
-<h1>sccp</h1>
-<p>#corinthians </p>
-</div>
-<div>
-<iframe width="560" height="315" src="https<iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=wetoWLvYnr0HzEKD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div><head>
-<link rel="stylesheet" href="styles.css">
-<title>Aluraflix</title>
-</head>
-
-<body>
-<header>ALURAFLIX</header>
-
-<div>
-    <h1>sccp</h1>
-    <p>#corinthians </p>
-</div>
-
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/W-Rvz-9Y8Jc?si=wetoWLvYnr0HzEKD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-
-</body>
-body {
-    color: white;
-    background: black;
-}
-
-header {
-
-}
-header {
-    border: solid 2px white;
-}
-header {
-    border: solid 2px rgb(8, 8, 8);
-}
-header {
-    border-bottom: solid 2px rgb(240, 241, 244);
-}
 body {
     color: white;
     background: black;
     margin: 0px;
-}
-header {
-    border-bottom: solid 2px rgb(227, 232, 237);
-    padding: 20px;
-}
-header {
-    border-bottom: solid 2px rgb(15, 16, 16);
-    padding: 20px;
-    font-size: 32px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(228, 61, 42);
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color: rgb(17, 17, 17);
+    color: rgb(42, 122, 228);
 }
 
-section {
-    background: rgb(234, 33, 15);
-}
-
-section {
-    background: rgb(213, 163, 156);
-    padding-bottom: 80px;
-}
-
-section {
-    background: rgb(254, 28, 3);
-    padding-bottom: 80px;
-    padding-top: 80px;
-}
-
-section {
-    background: rgb(254, 8, 0);
-    padding-bottom: 80px;
-    padding-top: 80px;
-    display: flex;
-}
-
-section {
-    background: rgb(253, 1, 1);
+.chamada {
+    background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
 }
 
-div {
-    margin-right: 20px;
+.chamada-texto {
+    margin-right: 5%;
 }
-<section>
-    <div class="chamada-texto">
-        <h1>sccp</h1>
-        <p>#corinthians </p>
-    </div>
 
-    <!-- código omitido -->
-</section>
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: rgb(42, 122, 228);
+}
